--- a/arborist/planter/build.gradle
+++ b/arborist/planter/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java',
     id 'war'
 }
 
@@ -12,5 +11,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+
+    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+}
+
+war {
+    webAppDirectory = file('src')
+    webXml = file('src/main/WEB-INF/web.xml')
 }
