--- a/arborist/planter/build.gradle
+++ b/arborist/planter/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
 }
