Configure Vite to match resource path in Tomcat and configure tomcat to land on the appropriate starting page and serve static resources.

--- a/arborist/planter/build.gradle
+++ b/arborist/planter/build.gradle
@@ -26,20 +26,7 @@ tasks.register('copyWeb') {
     doLast {
         copy {
             from "../dist"
-            into "./src/main/resources/web/dist"
-            include "**/*.css"
-            include "**/*.html"
-            include "**/*.js"
-            filter {
-                String line -> line
-                        .replaceAll("/assets", "/planter/main/resources/web/dist/assets")
-                        .replaceAll("/image/", "/planter/main/resources/web/dist/image/")
-            }
-        }
-        copy {
-            from "../dist"
-            into "./src/main/resources/web/dist"
-            include "**/*.png"
+            into "./src/main/static"
         }
     }
 }
