--- a/arborist/planter/src/main/WEB-INF/web.xml
+++ b/arborist/planter/src/main/WEB-INF/web.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
+    <welcome-file-list>
+        <welcome-file>/main/static/index.html</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>planter</servlet-name>
         <servlet-class>com.jubalrife.arborist.Planter</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.html</url-pattern>
+        <url-pattern>*.js</url-pattern>
+        <url-pattern>*.css</url-pattern>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>planter</servlet-name>
