--- a/arborist/planter/build.gradle
+++ b/arborist/planter/build.gradle
@@ -12,6 +12,8 @@ repositories {
 
 dependencies {
     implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    implementation group: 'com.h2database', name: 'h2', version: '2.2.220'
+    implementation group: 'com.jubalrife', 'name': 'knucklebones', version: '1.2.0'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
 }
