--- a/arborist/package.json
+++ b/arborist/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-dragscroll": "^4.0.6"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
